[UP] fix misspelled word

--- a/README.org
+++ b/README.org
@@ -4,7 +4,7 @@ Org Mob is an mobile application to read and manage todo list with [[https://org
 
 This parser will be used by the application backend
 
-The format is very similar to [[https://github.com/rasendubi/uniorg][UniOrg format]] and there is on desire for compatibility at this time.
+The format is very similar to [[https://github.com/rasendubi/uniorg][UniOrg format]] and there is no desire for compatibility at this time.
 
 ** Installation
 1. Add the dependency to your =shard.yml=
