--- a/README.org
+++ b/README.org
@@ -61,10 +61,10 @@ parser.parse("* Your Org\nyes your org note") # Return a json in the OrgMob Form
 + [ ] parse block quote
 + [ ] parse title properties
 
-*** Parser
+*** Parser Lib
 + [ ] accept file to parse
 
-*** Binary
+*** Parser Binary
 + [X] binary to parse string or file
 
 *** Project
