--- a/README.org
+++ b/README.org
@@ -61,6 +61,7 @@ parser.parse("./path_to_org_file") # Return a json in the OrgMob Format
 + [X] parse block code
 + [X] parse block quote
 + [X] parse title properties
++ [X] parser table
 
 *** Parser Lib
 + [X] accept file to parse
